--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "redux-thunk": "^2.4.2",
+    "styled-components": "^6.0.4",
     "typescript": "^4.9.5"
   },
   "scripts": {
