--- a/package.json
+++ b/package.json
@@ -1,50 +1,62 @@
 {
-  "name": "hacker-news",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@redux-devtools/extension": "^3.2.5",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^17.0.45",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "axios": "^1.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
-    "react-redux": "^8.1.1",
-    "react-router-dom": "^6.14.1",
-    "react-scripts": "5.0.1",
-    "redux-thunk": "^2.4.2",
-    "styled-components": "^6.0.4",
-    "typescript": "^4.9.5"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "hacker-news",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@redux-devtools/extension": "^3.2.5",
+		"@reduxjs/toolkit": "^1.9.5",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^14.4.3",
+		"@types/jest": "^27.5.2",
+		"@types/node": "^17.0.45",
+		"@types/react": "^18.2.15",
+		"@types/react-dom": "^18.2.7",
+		"axios": "^1.4.0",
+		"date-fns": "^2.30.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-query": "^3.39.3",
+		"react-redux": "^8.1.1",
+		"react-router-dom": "^6.14.1",
+		"react-scripts": "5.0.1",
+		"redux-thunk": "^2.4.2",
+		"styled-components": "^6.0.4",
+		"typescript": "^4.9.5"
+	},
+	"scripts": {
+		"start": "craco start",
+		"build": "craco build",
+		"test": "craco test"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@craco/craco": "^7.1.0",
+		"@svgr/webpack": "^8.0.1",
+		"@web-bee-ru/eslint-plugin": "^0.6.3",
+		"eslint": "^8.45.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-import-resolver-alias": "^1.1.2",
+		"eslint-import-resolver-node": "^0.3.7",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-prettier": "^5.0.0",
+		"eslint-plugin-unicorn": "^48.0.0"
+	}
 }
