feat: craco, alias, svgr

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,6 @@
 		"allowJs": true,
 		"skipLibCheck": true,
 		"esModuleInterop": true,
-		"allowSyntheticDefaultImports": true,
 		"strict": true,
 		"forceConsistentCasingInFileNames": true,
 		"noFallthroughCasesInSwitch": true,
@@ -14,7 +13,27 @@
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"noEmit": true,
-		"jsx": "react-jsx"
+		"jsx": "react-jsx",
+		"allowSyntheticDefaultImports": false,
+		"baseUrl": "./",
+		"paths": {
+			"@components/": ["src/components"],
+			"@components/*": ["src/components/*"],
+			"@ui/": ["src/ui"],
+			"@ui/*": ["src/ui/*"],
+			"@api/": ["src/api"],
+			"@api/*": ["src/api/*"],
+			"@const/": ["src/utils/const"],
+			"@const/*": ["src/utils/const/*"],
+			"@functions/": ["src/utils/functions"],
+			"@functions/*": ["src/utils/functions/*"],
+			"@actions/": ["src/redux/actions"],
+			"@actions/*": ["src/redux/actions/*"],
+			"@reducers/": ["src/redux/reducers"],
+			"@reducers/*": ["src/redux/reducers/*"],
+			"@redux/": ["src/redux"],
+			"@redux/*": ["src/redux/*"]
+		}
 	},
 	"include": ["src", "**/*.tsx"]
 }
