--- a/package.json
+++ b/package.json
@@ -3,15 +3,6 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@redux-devtools/extension": "^3.2.5",
-		"@reduxjs/toolkit": "^1.9.5",
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "^14.4.3",
-		"@types/jest": "^27.5.2",
-		"@types/node": "^17.0.45",
-		"@types/react": "^18.2.15",
-		"@types/react-dom": "^18.2.7",
 		"axios": "^1.4.0",
 		"date-fns": "^2.30.0",
 		"react": "^18.2.0",
@@ -21,18 +12,15 @@
 		"react-router-dom": "^6.14.1",
 		"react-scripts": "5.0.1",
 		"redux-thunk": "^2.4.2",
-		"styled-components": "^6.0.4",
-		"typescript": "^4.9.5"
+		"styled-components": "^6.0.4"
 	},
 	"scripts": {
 		"start": "craco start",
-		"build": "craco build",
-		"test": "craco test"
+		"build": "craco build"
 	},
 	"eslintConfig": {
 		"extends": [
-			"react-app",
-			"react-app/jest"
+			"react-app"
 		]
 	},
 	"browserslist": {
@@ -48,6 +36,13 @@
 		]
 	},
 	"devDependencies": {
+		"typescript": "^4.9.5",
+		"@redux-devtools/extension": "^3.2.5",
+		"@reduxjs/toolkit": "^1.9.5",
+		"@types/jest": "^27.5.2",
+		"@types/node": "^17.0.45",
+		"@types/react": "^18.2.15",
+		"@types/react-dom": "^18.2.7",
 		"@craco/craco": "^7.1.0",
 		"@svgr/webpack": "^8.0.1",
 		"@web-bee-ru/eslint-plugin": "^0.6.3",
