--- a/package.json
+++ b/package.json
@@ -36,15 +36,14 @@
 		]
 	},
 	"devDependencies": {
-		"typescript": "^4.9.5",
+		"@craco/craco": "^7.1.0",
 		"@redux-devtools/extension": "^3.2.5",
 		"@reduxjs/toolkit": "^1.9.5",
+		"@svgr/webpack": "^8.0.1",
 		"@types/jest": "^27.5.2",
 		"@types/node": "^17.0.45",
 		"@types/react": "^18.2.15",
 		"@types/react-dom": "^18.2.7",
-		"@craco/craco": "^7.1.0",
-		"@svgr/webpack": "^8.0.1",
 		"@web-bee-ru/eslint-plugin": "^0.6.3",
 		"eslint": "^8.45.0",
 		"eslint-config-prettier": "^8.8.0",
@@ -52,6 +51,8 @@
 		"eslint-import-resolver-node": "^0.3.7",
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-prettier": "^5.0.0",
-		"eslint-plugin-unicorn": "^48.0.0"
+		"eslint-plugin-unicorn": "^48.0.0",
+		"react-app-alias": "^2.2.2",
+		"typescript": "^4.9.5"
 	}
 }
