--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/is-prop-valid": "^1.2.1",
 		"axios": "^1.4.0",
 		"date-fns": "^2.30.0",
 		"react": "^18.2.0",
